--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -13,22 +13,83 @@
             DevilSec holds weekly formal meetings throughout the Fall and Spring semesters that cover a range of topics starting from using a virtual machine with Linux, to learning different tools such as web proxies and port scanners, and eventually to utilizing actual exploits for vulnerabilities in practice labs to get hands on experience. The group also has informal meetings for members that want to walk though a machine on HackTheBox or just be around to chat and answer questions.  
         </p><br></br>
         <h3>Current Leadership</h3>
-        <p> President:</p>
-        <p> Bash </p>
-        <p> Vice President:</p>
+        <div class="col-sm-6 col-md-6 col-lg-6">
+            <div class="row">
+                <div>     
+                <b> President:</b>
+        <p> Lani Sears </p>
+        <img src="/src/assets/img/lani.png" style="width:200px;height:200px;"></img>
+                </div>
+                <div>
+                    <br></br>
+        <b> Vice President:</b>
         <p> Tayari </p>
-        <p> Treasurer:</p>
-        <p> Singh </p>
-        <p> Secretary:</p>
-        <p> Sadeli </p>
-        <p> Staff:</p>
-        <p> Ero, Ben, Kyle29, Warden, Zi Jia, Megi, Prithvidiamond1 </p>
-        <p> Founders:</p>
-        <p> Squakie & Nightbane </p>
+        <img src="/src/assets/img/DevilSecLogo.png" style="width:200px;height:200px;"></img>
+                </div>
+                <div>
+                    <br></br>
+                <b> Treasurer:</b>
+                    <p> Gursharan Singh </p>
+                    <img src="/src/assets/img/singh.png" style="width:200px;height:200px;"></img>
+                </div>
+                <div>
+                    <br></br>
+                    <b> Secretary:</b>
+        <p> Thad Shinno </p>
+        <img src="/src/assets/img/thad.png"></img>
+                </div>
+                <div>
+                    <br></br>
+                    <b> Founders: </b>
+                    <p> Allen Foust & Matt Keeley</p>
+                    <img src="/src/assets/img/DevilSecLogo.png" style="width:200px;height:200px;"></img>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-6 col-lg-6">
+            <div class="row">
+                <b> Staff:</b>
+                    <div>
+                        <p>Ero</p>
+                        <img src="/src/assets/img/DevilSecLogo.png" style="width:200px;height:200px;"></img>
+                    </div>
+                    <br></br>
+                    <div>
+                        <p>Ben</p>
+                        <img src="/src/assets/img/DevilSecLogo.png" style="width:200px;height:200px;"></img>
+                    </div>
+                    <br></br>
+                    <div>
+                        <p>Kyle29</p>
+                        <img src="/src/assets/img/DevilSecLogo.png" style="width:200px;height:200px;"></img>
+                    </div>
+                    <br></br>
+                    <div>
+                        <p>Warden</p>
+                        <img src="/src/assets/img/DevilSecLogo.png" style="width:200px;height:200px;"></img>
+                    </div>
+                    <br></br>
+                    <div>
+                        <p>Zi Jia Tan</p>
+                        <img src="/src/assets/img/zi.png" style="width:200px;height:200px;"></img>
+                    </div>
+                    <br></br>
+                    <div>
+                        <p>Megi</p>
+                        <img src="/src/assets/img/DevilSecLogo.png" style="width:200px;height:200px;"></img>
+                    </div>
+                    <br></br>
+                    <div>
+                        <p>Prithviraj</p>
+                        <img src="/src/assets/img/DevilSecLogo.png" style="width:200px;height:200px;"></img>
+                    </div>
+                    <br></br>
+</div>
+            </div>
         <br></br> 
         <h4> Have questions? </h4>
         <p> ASU students can use Sun Devil Sync to get in touch and get access to more resources in the Discord server allocated just for ASU students.</p>
         <p> Both ASU students and non ASU members can feel free to hop in the Discord server and ask questions there as well.</p>
-    </div>
+        </div>
 </html>
 
