--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -12,84 +12,121 @@
         <p>
             DevilSec holds weekly formal meetings throughout the Fall and Spring semesters that cover a range of topics starting from using a virtual machine with Linux, to learning different tools such as web proxies and port scanners, and eventually to utilizing actual exploits for vulnerabilities in practice labs to get hands on experience. The group also has informal meetings for members that want to walk though a machine on HackTheBox or just be around to chat and answer questions.  
         </p><br></br>
-        <h3>Current Leadership</h3>
-        <div class="col-sm-6 col-md-6 col-lg-6">
-            <div class="row">
+        <h3>Founders</h3>
+        <div class="row">
+            <div class="col-sm-6 col-md-6 col-lg-6">
+                <div> 
+                    <p> Allen Foust </p>
+                    <img src = "/src/assets/img/DevilSecLogo.png" style="width:200px;height:200px;"></img>
+                </div>
+            </div>
+            <div class="col-sm-6 col-md-6 col-lg-6">
+                <div>
+                    <p> Matt Keeley </p>
+                    <img src = "/src/assets/img/DevilSecLogo.png" style="width:200px;height:200px;"></img>
+                </div>
+            </div>
+        </div>
+        <h3>Current leadership</h3>
+        <div class="row">
+            <div class="col-sm-3 col-md-3 col-lg-3">
+                <br></br>
                 <div>     
                 <b> President:</b>
-        <p> Lani Sears </p>
-        <img src="/src/assets/img/lani.png" style="width:200px;height:200px;"></img>
+                    <p> Lani Sears </p>
+                    <img src="/src/assets/img/lani.png" style="width:200px;height:200px;"></img>
                 </div>
-                <div>
-                    <br></br>
-        <b> Vice President:</b>
-        <p> Tayari </p>
-        <img src="/src/assets/img/DevilSecLogo.png" style="width:200px;height:200px;"></img>
+            </div>
+            <div class="col-sm-3 col-md-3 col-lg-3">
+                <br></br>
+                <div> 
+                <b> Vice President:</b>
+                    <p> Tayari </p>
+                    <img src="/src/assets/img/tayari.png" style="width:200px;height:200px;"></img>
                 </div>
+            </div>
+            <div class="col-sm-3 col-md-3 col-lg-3">
+                <br></br>
                 <div>
-                    <br></br>
                 <b> Treasurer:</b>
                     <p> Gursharan Singh </p>
                     <img src="/src/assets/img/singh.png" style="width:200px;height:200px;"></img>
                 </div>
+            </div>
+            <div class="col-sm-3 col-md-3 col-lg-3">
+                <br></br>
                 <div>
-                    <br></br>
-                    <b> Secretary:</b>
-        <p> Thad Shinno </p>
-        <img src="/src/assets/img/thad.png"></img>
-                </div>
-                <div>
-                    <br></br>
-                    <b> Founders: </b>
-                    <p> Allen Foust & Matt Keeley</p>
-                    <img src="/src/assets/img/DevilSecLogo.png" style="width:200px;height:200px;"></img>
+                <b> Secretary:</b>
+                    <p> Thad Shinno </p>
+                    <img src="/src/assets/img/thad.png"></img>
                 </div>
             </div>
         </div>
-        <div class="col-sm-6 col-md-6 col-lg-6">
-            <div class="row">
-                <b> Staff:</b>
-                    <div>
-                        <p>Ero</p>
-                        <img src="/src/assets/img/DevilSecLogo.png" style="width:200px;height:200px;"></img>
-                    </div>
-                    <br></br>
-                    <div>
-                        <p>Ben</p>
-                        <img src="/src/assets/img/DevilSecLogo.png" style="width:200px;height:200px;"></img>
-                    </div>
-                    <br></br>
-                    <div>
-                        <p>Kyle29</p>
-                        <img src="/src/assets/img/DevilSecLogo.png" style="width:200px;height:200px;"></img>
-                    </div>
-                    <br></br>
-                    <div>
-                        <p>Warden</p>
-                        <img src="/src/assets/img/DevilSecLogo.png" style="width:200px;height:200px;"></img>
-                    </div>
-                    <br></br>
-                    <div>
-                        <p>Zi Jia Tan</p>
-                        <img src="/src/assets/img/zi.png" style="width:200px;height:200px;"></img>
-                    </div>
-                    <br></br>
-                    <div>
-                        <p>Megi</p>
-                        <img src="/src/assets/img/DevilSecLogo.png" style="width:200px;height:200px;"></img>
-                    </div>
-                    <br></br>
-                    <div>
-                        <p>Prithviraj</p>
-                        <img src="/src/assets/img/DevilSecLogo.png" style="width:200px;height:200px;"></img>
-                    </div>
-                    <br></br>
-</div>
+        <h3> Officers </h3>
+        <div class="row">
+            <div class="col-sm-2 col-md-2 col-lg-2">
+                <div>
+                    <p>Ero</p>
+                    <img src="/src/assets/img/DevilSecLogo.png" style="width:200px;height:200px;"></img>
+                </div>
             </div>
-        <br></br> 
-        <h4> Have questions? </h4>
-        <p> ASU students can use Sun Devil Sync to get in touch and get access to more resources in the Discord server allocated just for ASU students.</p>
-        <p> Both ASU students and non ASU members can feel free to hop in the Discord server and ask questions there as well.</p>
+            <div class="col-sm-2 col-md-2 col-lg-2">
+                <div>
+                    <p>Ben</p>
+                    <img src="/src/assets/img/DevilSecLogo.png" style="width:200px;height:200px;"></img>
+                </div>
+		<div class="col-md-12">
+                <a href="https://github.com/Nightfire-0x07" target="_blank">
+                    <img src="/src/assets/img/github.svg" style="width:30px;height:30px;"></img>
+		</a>
+                <a href="https://twitter.com" target="_blank">
+                    <img src="/src/assets/img/twitter.svg" style="width:30px;height:30px;"></img>
+		</a>
+                <a href="https://facebook.com" target="_blank">
+                    <img src="/src/assets/img/facebook.svg" style="width:30px;height:30px"></img>
+                </a>
+		</div>
+            </div>
+            <div class="col-sm-2 col-md-2 col-lg-2">
+                <div>
+                    <p>Kyle29</p>
+                    <img src="/src/assets/img/DevilSecLogo.png" style="width:200px;height:200px;"></img>
+                </div>
+            </div>
+            <div class="col-sm-2 col-md-2 col-lg-2">
+                <div> 
+                    <p>Warden</p>
+                    <img src="/src/assets/img/DevilSecLogo.png" style="width:200px;height:200px;"></img>
+                </div>
+            </div>
+            <div class="col-sm-2 col-md-2 col-lg-2">
+                <div>
+                    <p>Zi Jia Tan</p>
+                    <img src="/src/assets/img/zi.png" style="width:200px;height:200px;"></img>
+                </div>
+            </div>
+            <div class="col-sm-2 col-md-2 col-lg-2">
+                <div>
+                    <p>Megi</p>
+                    <img src="/src/assets/img/DevilSecLogo.png" style="width:200px;height:200px;"></img>
+                </div>
+            </div>
+            <div class="col-sm-12 col-md-12 col-lg-12">    
+                <div>
+                    <p>Prithviraj</p>
+                    <img src="/src/assets/img/prithvi.png" style="width:200px;height:200px;"></img>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class=col-sm-12 col-md-12 col-lg-12>
+                <br></br>  
+                <h4> Have questions? </h4>
+                <div> 
+                <p> ASU students can use Sun Devil Sync to get in touch and get access to more resources in the Discord server allocated just for ASU students.</p>
+                <p> Both ASU students and non ASU members can feel free to hop in the Discord server and ask questions there as well.</p>
+                </div> 
+            </div>
         </div>
 </html>
 
